# runllm-take-home

./: .gitignore  Makefile  README.md
.devcontainer/: devcontainer.json
data/: README.md  generate_embeddings.py  texts.json  upload_embeddings.py
examples/: llm_client.py
server/: pyproject.toml
server/server/: api_key.py  server_app.py
server/server/api/: chat.py
server/server/kvs/: kvs.py
server/server/llm/: ollama_client.py
server/server/vectordb/: vectordb.py
setup/: pull_models.py  setup.sh
tests/: llm_judge.py  test_basic_qa.py
